force-app/main/default/objects/ApplicantInformation__c/ApplicantInformation__c.object-meta.xml
<CustomObject>
    <label>Applicant Information</label>
    <nameField>
        <label>Appli Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicant Information&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>