force-app/main/default/objects/ApplicantInformation__c/fields/A_copy_of_a_Certificate_of_Use_and_Occu__c.field-meta.xml
<CustomField>
    <fullName>A_copy_of_a_Certificate_of_Use_and_Occu__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If one cannot be obtained, please speak with your licensing inspector</inlineHelpText>
    <label>A copy of a “Certificate of Use and Occu</label>
    <type>Checkbox</type>
</CustomField>