force-app/main/default/objects/ApplicantInformation__c/fields/A_copy_of_all_forms_to_be_used_by_the_ch__c.field-meta.xml
<CustomField>
    <fullName>A_copy_of_all_forms_to_be_used_by_the_ch__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A copy of all forms to be used by the child day center, if different from the model forms provided bythe Department of Social Services.</inlineHelpText>
    <label>A copy of all forms child day center</label>
    <type>Checkbox</type>
</CustomField>