force-app/main/default/objects/ApplicantInformation__c/fields/A_copy_of_all_policies_and_procedures__c.field-meta.xml
<CustomField>
    <fullName>A_copy_of_all_policies_and_procedures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A copy of all policies and procedures</label>
    <type>Checkbox</type>
</CustomField>