force-app/main/default/objects/ApplicantInformation__c/fields/A_copy_of_any_brochures__c.field-meta.xml
<CustomField>
    <fullName>A_copy_of_any_brochures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A copy of any brochures</label>
    <type>Checkbox</type>
</CustomField>