force-app/main/default/objects/ApplicantInformation__c/fields/A_copy_of_the_fire_inspection__c.field-meta.xml
<CustomField>
    <fullName>A_copy_of_the_fire_inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>conducted by the appropriate fire official within the last 12 months</inlineHelpText>
    <label>A copy of the fire inspection</label>
    <type>Checkbox</type>
</CustomField>