force-app/main/default/objects/ApplicantInformation__c/fields/A_site_plan_or_sketch__c.field-meta.xml
<CustomField>
    <fullName>A_site_plan_or_sketch__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The site plan or sketch should indicate outdoor play areas, including dimensions; location of the building ont he site; adjacent streets and parking area; all fences, fixed equipment and secondary buildings or structures.</inlineHelpText>
    <label>A site plan or sketch</label>
    <type>Checkbox</type>
</CustomField>