force-app/main/default/objects/ApplicantInformation__c/fields/Annual_operating_budget__c.field-meta.xml
<CustomField>
    <fullName>Annual_operating_budget__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The budget form on the public website contains the information required for initial application. It is a model forms o applicants may submit their own budget or one from their accountant as along as the budget contains information</inlineHelpText>
    <label>Annual operating budget</label>
    <type>Checkbox</type>
</CustomField>