force-app/main/default/objects/ApplicantInformation__c/fields/Are_you_a_DSS_subsidy_vendor__c.field-meta.xml
<CustomField>
    <fullName>Are_you_a_DSS_subsidy_vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are you a DSS subsidy vendor?</label>
    <type>Checkbox</type>
</CustomField>