force-app/main/default/objects/ApplicantInformation__c/fields/Asbestos_Statement_fromAsbestos_Inspecto__c.field-meta.xml
<CustomField>
    <fullName>Asbestos_Statement_fromAsbestos_Inspecto__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(if applicable)</description>
    <inlineHelpText>(if applicable)</inlineHelpText>
    <label>Asbestos Statement fromAsbestos Inspecto</label>
    <type>Checkbox</type>
</CustomField>