force-app/main/default/objects/ApplicantInformation__c/fields/Association__c.field-meta.xml
<CustomField>
    <fullName>Association__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Business associations are organizations that bring together business owners from a specific area. They range from nationwide associations to those that encompass businesses in individual states, counties, cities, or neighborhoods.</inlineHelpText>
    <label>Association</label>
    <type>Checkbox</type>
</CustomField>