force-app/main/default/objects/ApplicantInformation__c/fields/Background_Checks__c.field-meta.xml
<CustomField>
    <fullName>Background_Checks__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Sworn Disclosure Statement
National Criminal Background Check,
Child Protective Services Central Registry Check
Out-of-State Central Registry Check</inlineHelpText>
    <label>Background Checks:</label>
    <type>Checkbox</type>
</CustomField>