force-app/main/default/objects/ApplicantInformation__c/fields/Business_Trust__c.field-meta.xml
<CustomField>
    <fullName>Business_Trust__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A business trust is an unincorporated association whose governing instrument, sometimes referred to as a declaration of trust, provides that one or more trustees will manage property or conduct for-profit business activities on behalf of one</inlineHelpText>
    <label>Business Trust</label>
    <type>Checkbox</type>
</CustomField>