force-app/main/default/objects/ApplicantInformation__c/fields/City_County__c.field-meta.xml
<CustomField>
    <fullName>City_County__c</fullName>
    <label>City/County</label>
    <length>25</length>
    <type>Text</type>
</CustomField>