force-app/main/default/objects/ApplicantInformation__c/fields/Corporation__c.field-meta.xml
<CustomField>
    <fullName>Corporation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A corporation is an artificial person or legal entitymanaged by a board of directors, consisting of one or more individuals, who collectively elect officers to run the corporation’sday-to-daybusiness activities.</inlineHelpText>
    <label>Corporation</label>
    <type>Checkbox</type>
</CustomField>