force-app/main/default/objects/ApplicantInformation__c/fields/Credit_Reference_for_the_Business_Entity__c.field-meta.xml
<CustomField>
    <fullName>Credit_Reference_for_the_Business_Entity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is required for all applicants. The credit reference must be from either a bank; one of the three credit agencies such as TransUnion, Equifax, or Experian; or a landlord or a service vendor such as a commercial food vendor. *This is not required for public agencies.</description>
    <inlineHelpText>This is required for all applicants. The credit reference must be from either a bank; one of the three credit agencies such as TransUnion, Equifax, or Experian; or a landlord or a service vendor such as a commercial food vendor. *This is not required for</inlineHelpText>
    <label>Credit Reference for the Business Entity</label>
    <type>Checkbox</type>
</CustomField>