force-app/main/default/objects/ApplicantInformation__c/fields/Do_you_offer_overnight_care__c.field-meta.xml
<CustomField>
    <fullName>Do_you_offer_overnight_care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you offer overnight care?</label>
    <type>Checkbox</type>
</CustomField>