force-app/main/default/objects/ApplicantInformation__c/fields/Equipment_available_for_children_to_play__c.field-meta.xml
<CustomField>
    <fullName>Equipment_available_for_children_to_play__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A list of indoor and outdoor play equipment available to children</inlineHelpText>
    <label>Equipment available for children to play</label>
    <type>Checkbox</type>
</CustomField>