force-app/main/default/objects/ApplicantInformation__c/fields/Evidence_of_required_insurance_coverage__c.field-meta.xml
<CustomField>
    <fullName>Evidence_of_required_insurance_coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evidence of required insurance coverage</label>
    <type>Checkbox</type>
</CustomField>