force-app/main/default/objects/ApplicantInformation__c/fields/Facility_E_mail_Address__c.field-meta.xml
<CustomField>
    <fullName>Facility_E_mail_Address__c</fullName>
    <label>Facility E-mail Address</label>
    <type>Email</type>
</CustomField>