force-app/main/default/objects/ApplicantInformation__c/fields/FEE_PAYABLETO_TREASURER_OF_VIRGINIA__c.field-meta.xml
<CustomField>
    <fullName>FEE_PAYABLETO_TREASURER_OF_VIRGINIA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FEE PAYABLETO “TREASURER OF VIRGINIA”</label>
    <type>Checkbox</type>
</CustomField>