force-app/main/default/objects/ApplicantInformation__c/fields/Floor_plans__c.field-meta.xml
<CustomField>
    <fullName>Floor_plans__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>These plans should indicate exact dimensions of rooms to be used, including:
room length and width; functions of each room; toilet facilities, including number of basins and toilets; and position of any fixed equipment and furniture</inlineHelpText>
    <label>Floor plans</label>
    <type>Checkbox</type>
</CustomField>