force-app/main/default/objects/ApplicantInformation__c/fields/If_asbestos_was_detected_by_the_asbestos__c.field-meta.xml
<CustomField>
    <fullName>If_asbestos_was_detected_by_the_asbestos__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If asbestos was detected by the asbestos inspector, Asbestos Statement (from Applicant), ifapplicable (See VDSS website)</inlineHelpText>
    <label>If asbestos was detected by the asbestos</label>
    <type>Checkbox</type>
</CustomField>