force-app/main/default/objects/ApplicantInformation__c/fields/If_No_building_built_before_1978__c.field-meta.xml
<CustomField>
    <fullName>If_No_building_built_before_1978__c</fullName>
    <defaultValue>false</defaultValue>
    <label>If No building built before 1978?</label>
    <type>Checkbox</type>
</CustomField>