force-app/main/default/objects/ApplicantInformation__c/fields/Individual_Sole_Proprietor__c.field-meta.xml
<CustomField>
    <fullName>Individual_Sole_Proprietor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A general partnership (sometimes simply referred to as a “partnership”) is an association of two or more persons to carry on, as co-owners, a business for profit. Each partner contributes money, property and/or services in return for an interest</inlineHelpText>
    <label>Individual/Sole Proprietor</label>
    <type>Checkbox</type>
</CustomField>