force-app/main/default/objects/ApplicantInformation__c/fields/Is_building_public_school_or_state_owned__c.field-meta.xml
<CustomField>
    <fullName>Is_building_public_school_or_state_owned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is building public school or state owned</label>
    <type>Checkbox</type>
</CustomField>