force-app/main/default/objects/ApplicantInformation__c/fields/Limited_Liability_Company_LLC__c.field-meta.xml
<CustomField>
    <fullName>Limited_Liability_Company_LLC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A limited liability company is an unincorporated association of one or more members (the owners) who share in the profits and losses of the company’s business. It is managed in accordance with an operating agreement by one or more members</inlineHelpText>
    <label>Limited Liability Company (LLC)</label>
    <type>Checkbox</type>
</CustomField>