force-app/main/default/objects/ApplicantInformation__c/fields/Mailing_Address_of_Facility__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_of_Facility__c</fullName>
    <label>Mailing Address of Facility</label>
    <type>TextArea</type>
</CustomField>