force-app/main/default/objects/ApplicantInformation__c/fields/Name_of_Facility_as_it_is_to_appear_on_l__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Facility_as_it_is_to_appear_on_l__c</fullName>
    <label>Name of Facility</label>
    <length>25</length>
    <type>Text</type>
</CustomField>