force-app/main/default/objects/ApplicantInformation__c/fields/Name_of_Program_Director__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Program_Director__c</fullName>
    <label>Name of Program Director:</label>
    <length>25</length>
    <type>Text</type>
</CustomField>