force-app/main/default/objects/ApplicantInformation__c/fields/Number_of_buildings_license_requested__c.field-meta.xml
<CustomField>
    <fullName>Number_of_buildings_license_requested__c</fullName>
    <label>Number of buildings license requested</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>