force-app/main/default/objects/ApplicantInformation__c/fields/One_Business_Entity_Section_Only_A_B_C_D__c.field-meta.xml
<CustomField>
    <fullName>One_Business_Entity_Section_Only_A_B_C_D__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This page must match business entity checked in Part 2</inlineHelpText>
    <label>One Business Entity Section Only A,B,C,D</label>
    <type>Checkbox</type>
</CustomField>