force-app/main/default/objects/ApplicantInformation__c/fields/Partnership__c.field-meta.xml
<CustomField>
    <fullName>Partnership__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A limited partnership, is a type of partnership distinct from a general partnership, is formed by two or more persons with at least one general partner and one limited partner. The general partners exercise control over the management</inlineHelpText>
    <label>Partnership</label>
    <type>Checkbox</type>
</CustomField>