force-app/main/default/objects/ApplicantInformation__c/fields/programs_that_operate_in_the_building_du__c.field-meta.xml
<CustomField>
    <fullName>programs_that_operate_in_the_building_du__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Programs operate during child care hours</label>
    <type>Checkbox</type>
</CustomField>