force-app/main/default/objects/ApplicantInformation__c/fields/Public_Agency__c.field-meta.xml
<CustomField>
    <fullName>Public_Agency__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>“Public Agency” is defined tomean the Government of the United States; local government; state agency, including any department, institution, authority, instrumentality, board, or other administrative agency of the Commonwealth</inlineHelpText>
    <label>Public Agency</label>
    <type>Checkbox</type>
</CustomField>