force-app/main/default/objects/ApplicantInformation__c/fields/Religious_Organization__c.field-meta.xml
<CustomField>
    <fullName>Religious_Organization__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A religious organization is generally a nondenominational or interdenominational organization and has a principal purpose of advancing religion.</inlineHelpText>
    <label>Religious Organization</label>
    <type>Checkbox</type>
</CustomField>