force-app/main/default/objects/ApplicantInformation__c/fields/Requested_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Requested_Capacity__c</fullName>
    <label>Requested Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>