force-app/main/default/objects/ApplicantInformation__c/fields/Requested_Maxium_AgeRange__c.field-meta.xml
<CustomField>
    <fullName>Requested_Maxium_AgeRange__c</fullName>
    <label>Requested Maximum  Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>