force-app/main/default/objects/ApplicantInformation__c/fields/Requested_Minimum_Age__c.field-meta.xml
<CustomField>
    <fullName>Requested_Minimum_Age__c</fullName>
    <label>Requested Minimum Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>