force-app/main/default/objects/ApplicantInformation__c/fields/Sample_current_daily_activity_schedule_f__c.field-meta.xml
<CustomField>
    <fullName>Sample_current_daily_activity_schedule_f__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Sample current daily activity schedule for each age group</inlineHelpText>
    <label>Sample activity schedule each age group</label>
    <type>Checkbox</type>
</CustomField>