force-app/main/default/objects/ApplicantInformation__c/fields/Sample_of_current_monthly_menu__c.field-meta.xml
<CustomField>
    <fullName>Sample_of_current_monthly_menu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample of current monthly menu</label>
    <type>Checkbox</type>
</CustomField>