force-app/main/default/objects/ApplicantInformation__c/fields/Staff_Information_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Staff_Information_Sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Staff Information Sheet</label>
    <type>Checkbox</type>
</CustomField>