force-app/main/default/objects/ApplicantInformation__c/fields/Street_Address_of_Facility__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_of_Facility__c</fullName>
    <label>Street Address of Facility</label>
    <type>TextArea</type>
</CustomField>