force-app/main/default/objects/ApplicantInformation__c/fields/Three_Reference_Letters__c.field-meta.xml
<CustomField>
    <fullName>Three_Reference_Letters__c</fullName>
    <defaultValue>false</defaultValue>
    <description>These are required for all individuals listed in the section for Type of Business Entity under “Identifying Information”. Reference letters must be dated no more than 12 months prior to the date of this application from three persons who are not related to the individual by blood or marriage who have known him/her for at least one month, and who can attest to his/her character and reputation</description>
    <inlineHelpText>These are required for all individuals listed in the section for Type of Business Entity under “Identifying Information”. Reference letters must be dated no more than 12 months prior to the date of this application from three persons who are not related</inlineHelpText>
    <label>Three Reference Letters</label>
    <type>Checkbox</type>
</CustomField>