force-app/main/default/objects/ApplicantInformation__c/fields/Written_confirmation_of_program_director__c.field-meta.xml
<CustomField>
    <fullName>Written_confirmation_of_program_director__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Written confirmation of program director</label>
    <type>Checkbox</type>
</CustomField>