force-app/main/default/objects/ApplicantInformation__c/fields/Written_documentation_of_the_center_s_c__c.field-meta.xml
<CustomField>
    <fullName>Written_documentation_of_the_center_s_c__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>to include all ndividuals who are responsible for operational and management decisions</inlineHelpText>
    <label>Written documentation of the center’s “c</label>
    <type>Checkbox</type>
</CustomField>